--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dom</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Dicee</title>
+    <link rel="stylesheet" href="styles.css">
+
+  </head>
+  <body>
 
 
-<h1 class="heading" id="headi">Utkarsh</h1>
-
-<a class="search" href="https://www.google.com/">Go To Search!</a>
 
 
-<ul>
-    <li>Utkarsh</li>
-    <li>Trishla</li>
-</ul>
+    <center>
+      <a href="index.html"><h1 class="heading">Roll The Dice <img height="50px" src="./images/refresh.png" alt=""></h1></a>
+
+        <img class="player" id="myImg" src="./images/dice1.png" >
+        <img class="player" id="myImg2" src="./images/dice1.png" >
+
+        <h4> I Won The Game</h4> 
+    </center>
+
+    
+
+    
 
 
-   <script src="script.js"></script> 
-</body>
+<script src="script.js"></script> 
+
+  </body>
+
+  
 </html>
